ingresses/dashboard-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`dashboard.docker.localhost`) || PathPrefix(`/dashboard`)
      services:
        - name: api@internal
          kind: TraefikService
